# wallpaper.rs

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
examples/: random_wallpaper.rs
src/: error.rs  macos.rs  windows.rs
src/linux/: gnome.rs  kde.rs  lxde.rs  mod.rs  xfce.rs
