[package]
name = "wallpaper"
version = "4.0.0"
edition = "2018"
authors = ["reujab <reujab@gmail.com>"]
description = "Gets and sets the desktop wallpaper/background."
repository = "https://github.com/reujab/wallpaper.rs"
readme = "readme.md"
keywords = ["desktop", "wallpaper", "background"]
categories = ["api-bindings"]
license = "Unlicense"

[dependencies]
dirs = { version = "5", optional = true }
thiserror = "2"
reqwest = { version = "0.12", optional = true, features = ["blocking"] }

[target.'cfg(unix)'.dependencies]
enquote = "1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
rust-ini = "0.21"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.53"

[dev-dependencies]
rand = "0.8"
clap = { version = "4", features = ["derive"] }

[features]
from_url = ["dirs", "reqwest"]
cron = []

[[example]]
name = "random_wallpaper"
path = "examples/random_wallpaper.rs"
required-features = ["cron"]
