[package]
name = "wallpaper"
version = "4.0.0"
edition = "2024"
authors = ["reujab <reujab@gmail.com>"]
description = "Gets and sets the desktop wallpaper/background."
repository = "https://github.com/reujab/wallpaper.rs"
readme = "readme.md"
keywords = ["desktop", "wallpaper", "background"]
categories = ["api-bindings"]
license = "Unlicense"

[dependencies]
dirs = { version = "6", optional = true }
thiserror = "2"
reqwest = { version = "0.12", optional = true, features = ["blocking"] }

[target.'cfg(unix)'.dependencies]
enquote = "1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
rust-ini = "0.21"
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_UI_WindowsAndMessaging"] }
winreg = "0.55"

[dev-dependencies]
rand = "0.9"
clap = { version = "4", features = ["derive"] }

[features]
from_url = ["dirs", "reqwest"]
cron = []

[[example]]
name = "random_wallpaper"
path = "examples/random_wallpaper.rs"
required-features = ["cron"]
